--- a/app/src/main/res/xml/tracker_config.xml
+++ b/app/src/main/res/xml/tracker_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- This Google Analytics tracking id is used for debugging -->
-    <string name="ga_trackingId">UA-71651722-2</string>
+    <string name="ga_trackingId">UA-71651722-2</string> <!-- TODO set to real tracking id OR use firebase analytics -->
     <bool name="ga_autoActivityTracking">true</bool>
     <bool name="ga_reportUncaughtExceptions">true</bool>
 
