--- a/app/src/main/res/layout-land/fragment_complete.xml
+++ b/app/src/main/res/layout-land/fragment_complete.xml
@@ -32,7 +32,7 @@
             tools:text="8979323846..." />
 
         <ImageButton
-            android:id="@+id/settings_button"
+            android:id="@+id/openSettings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/statement_textView"
