--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -8,24 +8,21 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
-            android:visibility="gone"
+            android:layout_margin="16dp"
             android:id="@+id/settings_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@android:color/darker_gray"
-            app:cardCornerRadius="8dp">
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:contentPadding="8dp"
+            app:cardCornerRadius="4dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp">
+                android:layout_height="wrap_content">
 
                 <ImageButton
                     android:id="@+id/closeSettings_button"
@@ -35,6 +32,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/close_settings_xs"
                     android:src="@drawable/ic_close_black_24dp" />
 
                 <android.support.design.widget.TextInputLayout
@@ -64,11 +62,13 @@
                         android:hint="@string/spacings"
                         android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
-
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
         <TextView
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:id="@+id/integerPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,6 +78,8 @@
             tools:text="3." />
 
         <TextView
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:id="@+id/fractionalPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,13 +89,15 @@
             tools:text="1415926535" />
 
         <ImageButton
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="24dp"
             android:id="@+id/openSettings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:padding="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
