Finish new settings in ReferenceFragment

--- a/app/src/main/res/layout/dialog_reference_settings.xml
+++ b/app/src/main/res/layout/dialog_reference_settings.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:hint="@string/text_size"/>
+            android:hint="@string/text_size_colon"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
