--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
-            android:layout_margin="16dp"
             android:id="@+id/settings_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
             android:visibility="gone"
-            tools:visibility="visible"
+            app:cardCornerRadius="4dp"
             app:contentPadding="8dp"
-            app:cardCornerRadius="4dp">
+            tools:visibility="visible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -33,30 +35,34 @@
                     android:layout_alignParentTop="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/close_settings_xs"
-                    android:src="@drawable/ic_close_black_24dp" />
+                    android:src="@mipmap/ic_close_24dp" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/textSize_textInputLayout"
+                <TextView
+                    android:id="@+id/textSize_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_size_colon" />
+
+                <!-- The range of this SeekBar should be 10 to 40,
+                 but the android:min attribute isn't supported on API 26
+                 and lower. So set max to 30, and in ReferenceFragment.java
+                 add 10 every time. -->
+                <SeekBar
+                    android:id="@+id/textSize_seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/textSize_textView"
                     android:layout_toLeftOf="@id/closeSettings_button"
-                    android:layout_toStartOf="@id/closeSettings_button">
-
-                    <EditText
-                        android:id="@+id/textSize_textView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/text_size"
-                        android:inputType="numberDecimal" />
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_toStartOf="@id/closeSettings_button"
+                    android:max="30" />
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/textSize_textInputLayout">
+                    android:layout_below="@id/textSize_seekBar">
 
                     <EditText
-                        android:id="@+id/spacings_textView"
+                        android:id="@+id/spacings_editText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/spacings"
@@ -66,41 +72,42 @@
         </android.support.v7.widget.CardView>
 
         <TextView
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:id="@+id/integerPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/settings_layout"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:textColor="?android:textColorPrimary"
             android:textSize="56sp"
             tools:text="3." />
 
         <TextView
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:id="@+id/fractionalPart_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/integerPart_textView"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
             tools:text="1415926535" />
 
         <ImageButton
-            android:layout_marginEnd="24dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="24dp"
             android:id="@+id/openSettings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="24dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_keyboard_arrow_down_black_24dp" />
+            android:src="@mipmap/ic_keyboard_arrow_down_24dp" />
     </RelativeLayout>
 </ScrollView>
