Improve refresh arrow design, place it below inputEditText

--- a/app/src/main/res/drawable-v21/ic_restart.xml
+++ b/app/src/main/res/drawable-v21/ic_restart.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
+    android:width="40dp"
+    android:height="40dp"
     android:viewportHeight="140"
     android:viewportWidth="140">
 
     <group
         android:name="rotating_arrow"
-        android:pivotX="75"
-        android:pivotY="55">
+        android:pivotX="70"
+        android:pivotY="70">
         <path
             android:name="circle"
-            android:pathData="M 75 5
-                a 50 50 0 0 1 50 50
-                a 50 50 0 0 1 -50 50
-                a 50 50 0 0 1 -50 -50"
+            android:pathData="M 70 20 A 50 50 0 1 1 20 70"
             android:strokeColor="@color/restart_arrow_color"
             android:strokeWidth="8" />
 
         <path
             android:name="triangle"
             android:fillColor="@color/restart_arrow_color"
-            android:pathData="M 10 55 l 30 0 l -15 -20 z"
-            android:strokeColor="@color/restart_arrow_color"
-            android:strokeWidth="8" />
+            android:pathData="M 0 75 L 40 75 L 20 50 Z"
+            android:strokeColor="@color/restart_arrow_color" />
     </group>
 </vector>
