--- a/app/src/main/res/layout-land/fragment_practise.xml
+++ b/app/src/main/res/layout-land/fragment_practise.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/root">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
@@ -35,18 +35,6 @@
                 android:textSize="42sp"
                 tools:text="3." />
 
-            <ImageButton
-                android:id="@+id/refresh_button"
-                android:layout_width="42sp"
-                android:layout_height="42sp"
-                android:layout_alignBottom="@id/integerPart_textView"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:background="@null"
-                android:contentDescription="@string/restart"
-                android:scaleType="fitCenter"
-                tools:src="@drawable/ic_refresh_36dp" />
-
             <EditText
                 android:id="@+id/input_editText"
                 android:layout_width="match_parent"
@@ -55,6 +43,18 @@
                 android:maxLines="8"
                 android:numeric="integer"
                 android:textSize="24sp" />
+
+            <ImageButton
+                android:id="@+id/refresh_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/input_editText"
+                android:background="@null"
+                android:contentDescription="@string/restart"
+                android:padding="8dp"
+                tools:src="@drawable/ic_refresh_36dp" />
 
             <TableLayout
                 android:layout_width="wrap_content"
