--- a/app/src/main/res/layout/fragment_practise.xml
+++ b/app/src/main/res/layout/fragment_practise.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/root">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
         android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -28,39 +28,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/headerLayout"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/integerPart_textView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/integerPart_textView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="?android:textColorPrimary"
-                    android:textSize="48sp"
-                    tools:text="3." />
-
-                <ImageButton
-                    android:id="@+id/refresh_button"
-                    android:layout_width="56sp"
-                    android:layout_height="56sp"
-                    android:background="@null"
-                    android:contentDescription="@string/restart"
-                    android:scaleType="fitCenter"
-                    tools:src="@drawable/ic_refresh_36dp" />
-            </LinearLayout>
+                android:textColor="?android:textColorPrimary"
+                android:textSize="48sp"
+                tools:text="3." />
 
             <EditText
                 android:id="@+id/input_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/headerLayout"
+                android:layout_below="@id/integerPart_textView"
                 android:maxLines="8"
                 android:numeric="integer"
                 android:textSize="24sp" />
+
+            <ImageButton
+                android:padding="8dp"
+                android:id="@+id/refresh_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/input_editText"
+                android:background="@null"
+                android:contentDescription="@string/restart"
+                tools:src="@drawable/ic_restart" />
 
             <TableLayout
                 android:layout_width="wrap_content"
