--- a/app/src/main/res/layout-land/fragment_practise.xml
+++ b/app/src/main/res/layout-land/fragment_practise.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
     <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -24,14 +23,73 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin">
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/openSettings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/settings"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_keyboard_arrow_down_24dp" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/settings_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:visibility="gone"
+                app:cardCornerRadius="4dp"
+                app:contentPadding="8dp"
+                tools:visibility="visible">
+
+                <ImageButton
+                    android:id="@+id/closeSettings_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/close_settings_xs"
+                    android:src="@drawable/ic_close_24dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/startDigit_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/starting_digit" />
+
+                    <EditText
+                        android:id="@+id/startDigit_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
             <TextView
                 android:id="@+id/integerPart_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/settings_layout"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="42sp"
                 tools:text="3." />
 
@@ -41,6 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/integerPart_textView"
                 android:maxLines="8"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
                 android:numeric="integer"
                 android:textSize="24sp" />
 
@@ -48,15 +108,20 @@
                 android:id="@+id/refresh_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/input_editText"
                 android:background="@null"
                 android:contentDescription="@string/restart"
                 android:padding="8dp"
-                tools:src="@drawable/ic_refresh_36dp" />
+                tools:src="@drawable/ic_restart" />
 
             <TableLayout
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/input_editText"
