--- a/app/src/main/res/layout-land/fragment_time.xml
+++ b/app/src/main/res/layout-land/fragment_time.xml
@@ -19,8 +19,8 @@
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -37,7 +37,8 @@
                     android:id="@+id/integerPart_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="48sp"
+                    android:textColor="?android:textColorPrimary"
+                    android:textSize="42sp"
                     tools:text="3." />
 
                 <TextView
